--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
+    // Conditional for compatibility with AGP <4.2.
+    if (project.android.hasProperty("namespace")) {
+        namespace 'yukams.app.background_locator_2'
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -37,7 +41,17 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+    // Set Java compatibility
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_11.toString()
+    }
 }
+
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
